passive radiation increase

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                 <button id="buy-amplifier">Buy Conversion Amplifier</button>
                 <span>Cost: <span id="amplifier-cost">20</span> Energy</span>
             </div>
+            <div class="upgrade gather-upgrades">
+                <button id="buy-gather-upgrade">Buy Gather Upgrade</button>
+                <span>Cost: 30 Energy</span>
+            </div>
+
             <!-- Add more upgrades as necessary -->
         </section>
 
